; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_action_util.c_set_oneshot_locked_mods.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_action_util.c_set_oneshot_locked_mods.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@oneshot_locked_mods = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_oneshot_locked_mods(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @oneshot_locked_mods, align 8
  %5 = icmp ne i64 %3, %4
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  store i64 %7, i64* @oneshot_locked_mods, align 8
  %8 = load i64, i64* @oneshot_locked_mods, align 8
  %9 = call i32 @oneshot_locked_mods_changed_kb(i64 %8)
  br label %10

10:                                               ; preds = %6, %1
  ret void
}

declare dso_local i32 @oneshot_locked_mods_changed_kb(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
